Pseudent bug - UL alignment across browsers.

--- a/sites/all/modules/cybercourse/pseudents/css/pseudents.css
+++ b/sites/all/modules/cybercourse/pseudents/css/pseudents.css
@@ -45,7 +45,6 @@ table#pseudent-choose-table td.selected {
 
 /* Char container */
 .pseudent {
-  clear: both;
   border: 1px solid #e3e3e3;
   border-radius: 4px;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
@@ -54,6 +53,11 @@ table#pseudent-choose-table td.selected {
   margin-bottom: 2em;
   overflow: hidden;
   padding: 1em;
+}
+
+/* Style the element following the pseudent container. */
+.pseudent+* {
+  clear: left;
 }
 
 /* Photo/caption container */
@@ -69,7 +73,7 @@ table#pseudent-choose-table td.selected {
 }
 
 .pseudent-content {
-  /*float: left;*/
+  float: left;
 }
 
 /* 'Back to pseudent list' link. */
